--- a/app/styles/sacred-grid.css
+++ b/app/styles/sacred-grid.css
@@ -14,7 +14,7 @@
 #sacred .grid .grid-header{
 	border-radius: 4px;
 	height: 40px;
-	line-height: 40px;
+	line-height: 36px;
 }
 #sacred .grid .grid-header{
 	color: #fff;
